Tue Apr 26 14:27:11 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/MainDiagram.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/MainDiagram.gmfmap:

          Change stereotype dcpslib to dcpsLib to be consistent with other libs.

Fri Apr 22 19:36:08 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/html/codegen/tasks/integration.html:

          Further touch up.

Fri Apr 22 19:13:37 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/html/codegen/tasks/integration.html:

          Removed sections that were a copy from generate.html. Fixed typo.

Fri Apr 15 15:08:28 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.help/tocreference.xml:

          Removed duplicate policy entry in TOC.

Fri Apr 15 14:50:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/be_produce.cpp:

          Added OpenDDS and ACE version numbers to the "Generated by..."
          comment which is inserted at the top of generated files.
          Moved this comment to the real top of the file, before #includes.

Fri Apr 15 14:25:28 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * MPC/config/dds_suppress_any_support.mpb:
        * dds/DdsDcps.mpc:

          Improved support for building OpenDDS with TAO's Anys and Typecodes.
          To use, set the MPC feature dds_suppress_anys to 0.

Thu Apr 14 12:07:15 UTC 2011  Byron Harris  <harrisb@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/plugin.xml:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfmap:

          Added validation warning if Pub/Sub's transportID not explicitly set.
