@@ -6,14 +6,14 @@ import org.eclipse.gef.EditPart;
 import org.eclipse.gmf.runtime.emf.type.core.commands.DestroyReferenceCommand;
 import org.eclipse.gmf.runtime.emf.type.core.requests.DestroyElementRequest;
 import org.eclipse.gmf.runtime.emf.type.core.requests.DestroyReferenceRequest;
-import org.eclipse.gmf.runtime.notation.impl.BasicCompartmentImpl;
+import org.eclipse.gmf.runtime.notation.BasicDecorationNode;
 
 public class RequestToCommandConverter {
 
 	public static DestroyReferenceCommand destroyElementRequestToDestroyReferenceCommand(
 			DestroyElementRequest req, EditPart host, TransactionalEditingDomain editingDomain) {
 		EditPart parentEditPart = host.getParent();
-		EObject parentElement = ((BasicCompartmentImpl) parentEditPart.getModel()).getElement();
+		EObject parentElement = ((BasicDecorationNode) parentEditPart.getModel()).getElement();
 		DestroyReferenceRequest destroyRefReq =
 			new DestroyReferenceRequest(editingDomain, parentElement, null, req.getElementToDestroy(), false);
 		DestroyReferenceCommand destroyRefCmd = new DestroyReferenceCommand(destroyRefReq);
